# MaterialUI-QML

./: .gitignore  CMakeLists.txt  MaterialUI-QML.pro  README.md  main.cpp  main.py  qml.qrc
src/utils/: application_event_filter.cpp  application_event_filter.h  application_event_filter.py
src_qml/: main.qml
src_qml/common_component/MaterialUI/: MAnimation.qml  MButton.qml  MButtonBase.qml  MButtonGroup.qml  MCheckbox.qml  MChip.qml  MCircularProgress.qml  MCollapse.qml  MColorPicker.qml  MComplexSelect.qml  MCopyText.qml  MDatePicker.qml  MDateSelector.qml  MDialog.qml  MDirectoryButton.qml  MDivider.qml  MFade.qml  MFileButton.qml  MFileMenuItem.qml  MFilledInput.qml  MFormControlLabel.qml  MFramelessWindow.qml  MGrow.qml  MIcon.qml  MIconButton.qml  MInput.qml  MInputBase.qml  MLinearProgress.qml  MList.qml  MListItem.qml  MMenu.qml  MMenuItem.qml  MMenuList.qml  MOpacityMask.qml  MOutlinedInput.qml  MOverflowYBox.qml  MPaper.qml  MPopover.qml  MRadio.qml  MRadioGroup.qml  (+17 more)
src_qml/common_component/MaterialUI/Font/: FontAwesomeFont.qml  IconsName.js  qmldir
src_qml/common_component/MaterialUI/StyleComponent/: MFilledInputStyle.qml  MFramelessWindowButtonsMac.qml  MFramelessWindowButtonsWin.qml  MInputStyle.qml  MOutlinedInputStyle.qml  MSourceProxy.qml  MWindowResizeHandler.qml  opacitymask.frag
src_qml/common_component/MaterialUI/SvgIcon/: FilledMap.js  OutlinedMap.js  RoundedMap.js  SharpMap.js  TwoToneMap.js
src_qml/common_component/MaterialUI/colors/: Grey.qml  Indigo.qml  Pink.qml  Red.qml  qmldir
src_qml/common_component/MaterialUI/styles/: Colors.qml  MPalette.qml  MShadow.qml  Palette.qml  TypographyStyle.qml  qmldir
src_qml/common_component/Route/: Route.qml  qmldir
src_qml/common_component/SQL/QSQL/: QSQL.qml  persistence.js  persistence.store.sql.js  qmldir
src_qml/common_component/SQL/SQLHelper/: SQLTools.qml  qmldir
src_qml/common_component/SQL/sqml/: CrudDao.qml  CrudService.qml  DatabaseConnection.qml  SqlMapping.qml  SqlQueryBuilder.qml
src_qml/common_component/Signal/QtSignal/: QtSignal.qml  qmldir
src_qml/common_component/Timer/ExeOnceTimer/: ExeOnceTimer.qml
src_qml/common_component/Timer/OnceTimer/: OnceTimer.qml
src_qml/common_js/: Color.js  ComponentConfig.js  StringUtil.js  Tools.js
src_qml/common_qml/: Aria2Util.qml  GlobalTaskList.qml  QHttp.qml  qmldir
src_qml/common_resources/: common_resources.qrc  gen_qrc_py.sh  rc_common_resources.py
src_qml/instance_component/AboutDialog/: AboutDialog.qml
src_qml/instance_component/Navbar/: Navbar.qml
src_qml/instance_component/SQLTable/SettingData/: SettingData.qml  qmldir
src_qml/instance_component/SQLTable/TableBase/: TableBase.qml
src_qml/instance_component/SQLTable/TableFactory/: TableFactory.qml  qmldir
src_qml/instance_component/SystemTray/: SystemTray.qml
src_qml/pages/Api/: BaseApi.qml  ButtonApi.qml  ButtonBaseApi.qml  ButtonGroupApi.qml  CheckboxApi.qml  CircularProgressApi.qml  ColorPickerApi.qml  ComplexSelect.qml  ComplexSelectApi.qml  DatePickerApi.qml  FormControlLabelApi.qml  FramelessWindowApi.qml  IconApi.qml  LinearProgressApi.qml  PaperApi.qml  PropsTable.qml  RadioApi.qml  RadioGroupApi.qml  SelectApi.qml  SliderApi.qml  SvgIconApi.qml  SwitchApi.qml  TextFieldApi.qml  TimePicker.qml
src_qml/pages/ButtonPage/: ButtonPage.qml
src_qml/pages/Display/: ButtonGroupPage.qml  ButtonPage.qml  CheckboxPage.qml  ColoPickerPage.qml  DateTimePickerPage.qml  FontAwesomeIconPage.qml  FramelessWindowPage.qml  IconPage.qml  PaperPage.qml  ProgressPage.qml  RadioPage.qml  SelectPage.qml  SliderPage.qml  SvgIconPage.qml  SwitchPage.qml  TextFieldPage.qml  TransitionsPage.qml
src_qml/pages/HomePage/: HomePage.qml
src_qml/pages/HomePage/Component/: CreateDialog.qml  DownloadInfo.qml  DownloadInfoFileItem.qml  DownloadItem.qml
src_qml/pages/HomePage/View/: DeleteView.qml  DownloadView.qml  HistoryView.qml
